updating css to hide addresses

--- a/css/layout.css
+++ b/css/layout.css
@@ -3,9 +3,8 @@
 */
 
 .customer-addresses {
-	/*
 	position:absolute;
-	left:-100000px;*/
+	left:-100000px;
 }
 
 #shipping .delete-address.deleting, #billing .delete-address.deleting {
